--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "helmet": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.7",
     "morgan": "^1.10.0",
-    "node-cron": "^2.0.3"
+    "node-cron": "^2.0.3",
+    "response-time": "^2.3.2",
+    "validator": "^13.1.17"
   }
 }
